# Audio2Face-3D-SDK

./: .gitignore  CITATION.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  build.bat  download_models.bat  fetch_deps.bat  gen_testdata.bat  run_sample.bat  run_sample.sh
Audio2Face-3D-SDK/: audio2x-sdk-test-data
a2f-wrapper/: CMakeLists.txt
a2f-wrapper/include/: a2f_wrapper.h
a2f-wrapper/src/: a2f_wrapper.cpp
audio2emotion-sdk/: CMakeLists.txt
audio2emotion-sdk/include/audio2emotion/: audio2emotion.h  dll_export.h  executor.h  executor_classifier.h  executor_postprocess.h  interactive_executor.h  model.h  multitrack_postprocess.h  parse_helper.h  postprocess.h
audio2emotion-sdk/include/audio2emotion/internal/: executor.h  executor_classifier.h  executor_classifier_core.h  executor_core.h  executor_postprocess.h  executor_postprocess_core.h  interactive_executor.h  interactive_executor_classifier.h  interactive_executor_postprocess.h  logger.h  macros.h  model.h  multitrack_postprocess.h  multitrack_postprocess_cuda.h  parse_helper.h  postprocess.h
audio2emotion-sdk/scripts/: common.py  gen_benchmark_data.py  gen_sample_data.py  gen_test_data.py  post_process.py  utils.py
audio2emotion-sdk/scripts/gen_test_data_scripts/: gen_test_data_inference.py
audio2emotion-sdk/source/audio2emotion/: audio2emotion.cpp
audio2emotion-sdk/source/audio2emotion-core/: CMakeLists.txt  executor.cpp  executor_classifier.cpp  executor_classifier_core.cpp  executor_core.cpp  executor_postprocess.cpp  executor_postprocess_core.cpp  interactive_executor.cpp  interactive_executor_classifer.cpp  interactive_executor_postprocess.cpp  model.cpp  multitrack_postprocess.cpp  multitrack_postprocess_cuda.cu  parse_helper.cpp  postprocess.cpp
audio2emotion-sdk/source/benchmarks/: CMakeLists.txt  executor.cpp  interactive_executor.cpp  main.cpp  test_benchmark.bat  test_benchmark.sh  utils.cpp  utils.h
audio2emotion-sdk/source/samples/: CMakeLists.txt  README.md
audio2emotion-sdk/source/samples/sample-a2e-executor/: CMakeLists.txt  main.cpp
audio2emotion-sdk/source/samples/sample-a2e-inference/: CMakeLists.txt  main.cpp
audio2emotion-sdk/tests/: CMakeLists.txt  main.cpp  test_core_batch_post_processor.cpp  test_core_batch_post_processor_cuda.cu  test_core_batch_post_processor_cuda.h  test_core_executor.cpp  test_core_inference.cpp  test_core_interactive_executor.cpp  test_core_parse_helper.cpp  utils.cpp  utils.h
audio2face-sdk/: CMakeLists.txt
audio2face-sdk/scripts/: common.py  data_utils.py  gen_sample_data.py  gen_test_data.py
audio2face-sdk/source/audio2face-core/: CMakeLists.txt  admm.cu  animator.cpp  animator_cuda.cu  blendshape_solver.cpp  blendshape_solver_base.cpp  blendshape_solver_cuda.cu  blendshape_solver_cuda_gpu.cu  blendshape_solver_gpu.cpp  bvls.cpp  cublas_handle.cpp  emotion.cpp  error.cpp  executor.cpp  executor_blendshapesolve.cpp  executor_core.cpp  executor_diffusion.cpp  executor_diffusion_core.cpp  executor_regression.cpp  executor_regression_core.cpp  interactive_executor.cpp  interactive_executor_blendshapesolve.cpp  interactive_executor_diffusion.cpp  interactive_executor_regression.cpp  job_runner.cpp  math_utils.cpp  model_diffusion.cpp  model_regression.cpp  model_shared.cpp  multitrack_animator.cpp  multitrack_animator_cuda.cu  noise.cpp  parse_helper.cpp
audio2face-sdk/source/benchmarks/: CMakeLists.txt  blendshape_solver.cpp  executor_blendshape.cpp  executor_geometry.cpp  interactive_executor.cpp  main.cpp  test_benchmark.bat  test_benchmark.sh  utils.cpp  utils.h
audio2face-sdk/source/samples/sample-a2f-a2e-executor/: CMakeLists.txt  main.cpp
audio2face-sdk/source/samples/sample-a2f-low-level-api-fullface/: CMakeLists.txt  main.cpp
audio2face-sdk/source/samples/sample-blendshape-cli/: CMakeLists.txt  main.cpp
audio2face-sdk/tests/: CMakeLists.txt  test_core_animator.cpp  test_core_animator_eyes.cpp  test_core_animator_teeth.cpp  test_core_batch_eyes_animator.cpp  test_core_batch_eyes_animator_cuda.cu  test_core_batch_eyes_animator_cuda.h  test_core_batch_pca_animator.cpp  test_core_batch_skin_animator.cpp  test_core_batch_skin_animator_cuda.cu  test_core_batch_skin_animator_cuda.h  test_core_batch_teeth_animator.cpp  test_core_batch_teeth_animator_cuda.cu  test_core_batch_teeth_animator_cuda.h  test_core_batch_tongue_animator.cpp  test_core_batch_tongue_animator_cuda.cu  test_core_batch_tongue_animator_cuda.h  test_core_blendshape_solver.cpp  test_core_bounded_ls_solver.cpp  test_core_emotion.cpp  test_core_error.cpp  test_core_executor.cpp  test_core_interactive_executor.cpp  test_core_parse_helper.cpp  utils.h
audio2x-common/: CMakeLists.txt
audio2x-common/scripts/: gen_test_data.py
audio2x-common/source/audio2x/: CMakeLists.txt  animated_tensor.cpp  animated_tensor_cuda.cu  audio2x.cpp  audio_accumulator.cpp  audio_accumulator_cuda.cu  audio_utils.cpp  cuda_stream.cpp  cuda_utils.cpp  emotion_accumulator.cpp  error.cpp  executor.cpp  float_accumulator.cpp  inference_engine.cpp  interactive_executor.cpp  io.cpp  logger_trt.cpp  npz_util.cpp  nvtx_trace.cpp  tensor.cpp  tensor_bool.cpp  tensor_cuda.cu  tensor_dict.cpp  tensor_float.cpp  tensor_int64.cpp  tensor_pool.cpp  tensor_uint64.cpp
audio2x-common/tests/: CMakeLists.txt  test_animated_tensor.cpp  test_audio_accumulator.cpp  test_bit_vector.cpp  test_emotion_accumulator.cpp  test_float_accumulator.cpp  test_inference_engine.cpp  test_integer_array.cpp  test_io.cpp  test_npz_util.cpp  test_tensor.cpp  test_tensor_dict.cpp  test_tensor_pool.cpp  utils.cpp  utils.h
audio2x-sdk/: CMakeLists.txt  RELEASE_NOTES.md
cmake/Modules/: FindAudioFile.cmake  FindBenchmark.cmake  FindCXXOPTS.cmake  FindCnpy.cmake  FindEigen3.cmake  FindGTest.cmake  FindMagicEnum.cmake  FindNlohmannJson.cmake  FindReflCpp.cmake  FindTbtSVD.cmake  FindTensorRT.cmake  FindZLIB.cmake
docs/: README.md
licenses/: TensorRT-Acknowledgements.txt  TensorRT-Readme.txt  audiofile-LICENSE.txt  cuda-LICENSE.txt  magic_enum-LICENSE.txt  refl-cpp-LICENSE.txt  tbtsvd-LICENSE.txt  zlib-LICENSE.txt
(+113 files in other folders)
